# ifj_proj_2022

./: .gitignore  CMakeLists.txt  Makefile  errors.c  errors.h  readme.md
.github/workflows/: telegram_integration.yml  tests.yml
docs/: documentation.tex  grammar.txt
src/: bvs.c  bvs.h  code_generator.c  code_generator.h  errors.c  errors.h  expression.c  expression.h  grammar.txt  lexical_fsm.c  lexical_fsm.h  lexical_token.c  lexical_token.h  main.c  optimiser.c  optimiser.h  semantic_analyzer.c  semantic_analyzer.h  str.c  str.h  string.c  string.h  symtable.c  symtable.h  syntax_analyzer.c  syntax_analyzer.h
tests/: code_generator_test.cpp  lexical_fsm_test.cpp  optimiser_test.cpp  semantic_analysis_test.cpp  string_test.cpp  syntax_analyzer_test.cpp
